@@ -172,11 +172,6 @@ setMethod("tcrossprod", signature(x = "TsparseMatrix", y = "missing"),
 				factors = list()) })
 	  })
 
-.as.dgT.Fun <- function(x, na.rm = FALSE, dims = 1) {
-    x <- as(x, "dgTMatrix")
-    callGeneric()
-}
-
 setMethod("colSums", signature(x = "TsparseMatrix"), .as.dgT.Fun,
 	  valueClass = "numeric")
 setMethod("colMeans", signature(x = "TsparseMatrix"), .as.dgT.Fun,
